# chorddb-rust

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.local  README.md  Trunk.toml  index.html  input.css  migrate_and_run.sh  package.json  songs.json  test.html
frontend/: .env.development  .eslintrc.cjs  .gitignore  Cargo.toml  Dockerfile  bun.lockb  chorddb.ts  package.json  render.ts  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.css  chord_selector.ts  chorddb.ts  fingering_selector.ts  main.rs  render.ts  utils.ts
frontend/src/lib/: ChordDrawing.svelte  FingeringSelector.svelte  GoogleSignInButton.svelte  Tablature.svelte  api.ts  chord_drawing.ts  fingering_selector.ts  instrument.ts  song.ts  tablature.ts
frontend/src/lib/api/: auth.ts  fingerings.ts  song.ts
frontend/src/lib/svg/: BackspaceSvg.svelte  EditSvg.svelte  MusicalNote.svelte
frontend/src/routes/: +layout.server.ts  +layout.svelte  +layout.ts  +page.js  +page.svelte  +page.ts
frontend/src/routes/(app)/: +layout.ts  +page.svelte  +page.ts
frontend/src/routes/(app)/songs/[id]/: +page.ts
frontend/src/routes/(app)/songs/[id]/edit/: +page.svelte
frontend/src/routes/(public)/login/: +page.server.ts  +page.svelte
frontend/src/routes/songs/[id]/: +page.js  +page.svelte  +page.ts
frontend/src/routes/songs/[id]/edit/: +page.svelte  +page.ts
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_song_and_user_tables.rs  m20220101_000001_create_song_table.rs  m20240428_182756_add_song_fingerings.rs  m20240709_020038_create_sessions_table.rs  tables.rs
scripts/: autobuild.sh  build_images.sh  local_images.sh  run.bat  run_all.sh
server/: Cargo.toml
server/benches/: my_benchmark.rs
server/src/: chord.rs  error.rs  instrument.rs  lib.rs  main.rs  parser.rs  song.rs
server/src/chord/: finder.rs  mod.rs
server/src/entities/: mod.rs  prelude.rs  session.rs  song.rs  user.rs
server/src/session/: mod.rs
server/src/song/: database.rs  mod.rs
server/src/user/: database.rs  mod.rs
server/src/web/: api.rs  auth.rs  chord.rs  home.rs  instrument.rs  mod.rs  not_found.rs  song.rs
server/templates/: base.html  home.html  song.html
src/: main.rs  service.rs  state.rs
src/views/: mod.rs
styles/: input.css
templates/: 404.html  base.html  home.html  song.html
