[package]
name = "leptos-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
env_logger = "0.11.3"
leptos = { version = "0.6.10", features = ["csr", "nightly"] }
leptos_router = { version = "0.6.10", features = ["csr"] }
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

[package.metadata.leptos]
style-file = "style/output.css"
