[package]
name = "chorddb"
version = "0.1.0"
edition = "2021"
default-run = "chorddb"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
clap = { version = "4.4.11", features = ["derive"] }
itertools = "0.12.0"
lazy_static = "1.4.0"
log = "0.4.20"
plex = "0.3.0"
regex = "1.10.2"
sea-orm = { version = "=1.0.0-rc.3", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.109"
sorted-vec = "0.8.3"
test-log = "0.2.14"
tokio = { version = "1.35.1", features = ["full"] }
tokio-io = "0.1.13"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
dotenv = "0.15.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false
